fixed buttons as well as contrast issues.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -42,22 +42,12 @@ footer {
 }
 
 
-h1 {
+h1,
+h2,
+p {
     font-family: var(--heading-font);
     color: var(--accent-color2);
 }
-
-
-h2 {
-    font-family: var(--paragraph-font);
-    color: var(--accent-color1);
-}
-
-p {
-    font-family: var(--paragraph-font);
-    color: var(--accent-color2);
-}
-
 
 
 /* First third */
@@ -132,13 +122,13 @@ div.nav_right a {
 
 .company_intro h2 {
     font-size: 16px;
-    color: rgb(255, 255, 255, 0.6);
+    color: var(--accent-color1);
     letter-spacing: 4px;
 }
 
 .company_intro p {
     padding-bottom: 30px;
-    color: rgb(255, 255, 255, 0.7);
+    color: var(--accent-color1);
     font-size: 20px;
 }
 
@@ -287,6 +277,7 @@ article {
     padding-top: var(--padding);
     padding-bottom: var(--padding);
     align-content: center;
+    color: var(--accent-color1);
 
 }
 
@@ -516,7 +507,7 @@ body {
 
 .trips_intro h2 {
     font-size: 16px;
-    color: rgb(255, 255, 255, 0.6);
+    color: var(--accent-color1);
     letter-spacing: 4px;
 }
 
@@ -531,7 +522,7 @@ body {
 
 .trips_intro p {
     padding-bottom: 30px;
-    color: rgb(255, 255, 255, 0.8);
+    color: var(--accent-color1);
     font-size: 20px;
 }
 
@@ -836,7 +827,7 @@ button:hover {
 
 /* .wireframe {
     display: flex;
-    justify-content: center;
+    justify-content: center; 
     align-items: center;
     text-align: center;
 } */
